plugin/bearer remove static QDBusConnection::systemBus() initialization

The static initialization of QDBusConnection::systemBus() can occur
before the creation of QCoreApplication. This causes a warning from
QDBusConnection and may cause the application to crash on exit.

Since QDBusConnection::systemBus() is just an accessor, there is no
real advantage to storing a static reference to it.

Task-number: QTBUG-39248
Change-Id: I4401810c7c2ffd21a30f9ffd41b3a46e7e09214c
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>

cregit: 8917179b47cf2ead645aaacfb680d261308cd866 https://github.com/qt/qtbase/commit/8917179b47cf2ead645aaacfb680d261308cd866