src/plugins/bearer/networkmanager/qnetworkmanagerservice.cpp
@@ -126,4 +126,3 @@ DECL|member|valid
 DECL|member|valid
 DECL|member|valid
 DECL|member|valid
-DECL|variable|dbusConnection
